--- a/LISP-Programming/18-Jan-2018.md
+++ b/LISP-Programming/18-Jan-2018.md
@@ -2,3 +2,12 @@
 # Online Programming
 Link is: [http://rextester.com/l/common_lisp_online_compiler](http://rextester.com/l/common_lisp_online_compiler)
 
+
+# Programs
+---
+(print
+ 
+ (+ 1 2)
+ 
+ )
+---
