--- a/LISP-Programming/18-Jan-2018.md
+++ b/LISP-Programming/18-Jan-2018.md
@@ -5,9 +5,12 @@ Link is: [http://rextester.com/l/common_lisp_online_compiler](http://rextester.c
 
 # Programs
 ---
-(print
+
+(
+print
  
  (+ 1 2)
  
  )
+ 
 ---
