--- a/LISP-Programming/18-Jan-2018.md
+++ b/LISP-Programming/18-Jan-2018.md
@@ -25,3 +25,23 @@ print
  )
  
 ---
+
+defun square (x)
+    
+    (* x x)
+    )
+
+(defun sum-of-squares(x y)
+
+(+ (square x) (square y)) )
+
+
+(
+ print
+ 
+ (sum-of-squares 2 9)
+ 
+ )
+ 
+ Output is: 85
+---
