--- a/LISP-Programming/18-Jan-2018.md
+++ b/LISP-Programming/18-Jan-2018.md
@@ -26,14 +26,13 @@ print
  
 ---
 
-defun square (x)
-    
-    (* x x)
-    )
+( defun square (x)
+  (* x x)
+  )
 
-(defun sum-of-squares(x y)
-
-(+ (square x) (square y)) )
+( defun sum-of-squares(x y)
+(+ (square x) (square y)) 
+)
 
 
 (
