--- a/LISP-Programming/18-Jan-2018.md
+++ b/LISP-Programming/18-Jan-2018.md
@@ -43,4 +43,23 @@ print
  )
  
  Output is: 85
+
+---
+
+    ( defun absolute (x)
+    
+    (cond 
+        ((> x 0) x)
+        ((< x 0) (- x))
+        ((= x 0) 0)
+        )
+          
+    
+    )
+
+
+   (print( absolute 0))
+
+    Result is: 0
+    
 ---
