--- a/LISP-Programming/18-Jan-2018.md
+++ b/LISP-Programming/18-Jan-2018.md
@@ -63,3 +63,17 @@ print
     Result is: 0
     
 ---
+
+(defun odd (x) 
+ (cond ((= x 0) nil) ;base case
+       ((= x 1) T) ; base case
+       (T ( odd (- x 2) )) ;else substract 2 and call again
+     );end cond
+    )
+
+
+(print( odd 2))
+
+Return nil if number is even, else return T, if number is odd
+
+---
