--- a/LISP-Programming/18-Jan-2018.md
+++ b/LISP-Programming/18-Jan-2018.md
@@ -77,19 +77,16 @@ Return nil if number is even, else return T, if number is odd
 
 ---
 
-;Printing a List of 50 numbers
+    ;Printing a List of 50 numbers
 
-(
- defun listprint2(x)
- ;(print x)
- (cond ((= x 0) (list 1))
-       ((> x 0) (append (listprint2 (- x 1)) (list x) ))
-     
-  )
- )
+    (
+     defun listprint2(x)
+      (cond ((= x 0) (list 1))
+            ((> x 0) (append (listprint2 (- x 1)) (list x) ))
+       )
+     )
 
-(print( listprint2 50))
+    (print( listprint2 50))
 
-(1 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28
- 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50)
+    Prints: (1 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50)
  
