--- a/machine-learning/Algorithm-1/reg-3.ipynb
+++ b/machine-learning/Algorithm-1/reg-3.ipynb
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -247,15 +247,14 @@
      "output_type": "stream",
      "text": [
       "Coefficients: \n",
-      " [ -5.26226645e-03   3.72246144e-01   2.48512891e-04   8.99618321e-01\n",
-      "   6.38564236e-01   5.78215512e-01  -5.75092916e-01   3.10365092e-01\n",
-      "  -2.33111015e-02   2.88038926e-01  -3.14273631e-01   3.14273631e-01]\n",
+      " [-0.0071977   0.39082084  0.00126427  0.94890552  0.67007086  0.60196517\n",
+      " -0.58591719  0.31587259 -0.02151798  0.29156258 -0.31669966  0.31669966]\n",
       "Mean squared error: 0.01\n",
       "Variance score: 0.97\n",
       "----------------------------------------------------------------------------------------------------\n",
       "error = label-pred\n",
-      "max: 0.260411069349\n",
-      "min: -0.356536682884\n"
+      "max: 0.272378207022\n",
+      "min: -0.324424425406\n"
      ]
     }
    ],
@@ -265,7 +264,7 @@
     "from sklearn import linear_model\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
     "\n",
-    "regr = Ridge(alpha=2.0)\n",
+    "regr = Ridge(alpha=0.1)\n",
     "# Train the model using the training sets\n",
     "regr.fit(data, label)\n",
     "\n",
@@ -296,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -304,64 +303,67 @@
      "output_type": "stream",
      "text": [
       "--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "Mean squared error: 0.21\n",
-      "Variance score: 0.41\n",
+      "Mean squared error: 0.35\n",
+      "Variance score: 0.00\n",
       "error = label-pred\n",
-      "max: 0.687455039439\n",
-      "min: -1.26032760147\n",
+      "max: 1.29770659078\n",
+      "min: -1.70142661735\n",
       "--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "Mean squared error: 0.20\n",
-      "Variance score: 0.43\n",
+      "Mean squared error: 0.01\n",
+      "Variance score: 0.97\n",
       "error = label-pred\n",
-      "max: 0.80025647091\n",
-      "min: -1.2424818344\n",
+      "max: 0.272378207022\n",
+      "min: -0.324424425406\n",
       "--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "Mean squared error: 0.19\n",
-      "Variance score: 0.46\n",
+      "Mean squared error: 0.01\n",
+      "Variance score: 0.97\n",
       "error = label-pred\n",
-      "max: 0.802730861759\n",
-      "min: -1.22809331599\n",
+      "max: 0.219941906371\n",
+      "min: -0.317582420906\n",
       "--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "Mean squared error: 0.18\n",
-      "Variance score: 0.49\n",
+      "Mean squared error: 0.01\n",
+      "Variance score: 0.98\n",
       "error = label-pred\n",
-      "max: 0.793704165715\n",
-      "min: -1.20722833309\n",
+      "max: 0.221865787889\n",
+      "min: -0.240969147245\n",
       "--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "Mean squared error: 0.16\n",
-      "Variance score: 0.53\n",
+      "Mean squared error: 0.00\n",
+      "Variance score: 0.99\n",
       "error = label-pred\n",
-      "max: 0.792161470451\n",
-      "min: -1.19262363143\n",
+      "max: 0.224163444038\n",
+      "min: -0.228753009372\n",
       "--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "Mean squared error: 0.15\n",
-      "Variance score: 0.58\n",
+      "Mean squared error: 0.00\n",
+      "Variance score: 0.99\n",
       "error = label-pred\n",
-      "max: 0.781225371909\n",
-      "min: -1.179427865\n",
+      "max: 0.204065815363\n",
+      "min: -0.194461477661\n",
       "--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "Mean squared error: 0.14\n",
-      "Variance score: 0.61\n",
+      "Mean squared error: 0.00\n",
+      "Variance score: 1.00\n",
       "error = label-pred\n",
-      "max: 0.755561351929\n",
-      "min: -1.1586631106\n"
+      "max: 0.179140301781\n",
+      "min: -0.16898720733\n",
+      "--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+      "Mean squared error: 0.00\n",
+      "Variance score: 1.00\n",
+      "error = label-pred\n",
+      "max: 0.155082225619\n",
+      "min: -0.141799618931\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "from sklearn.linear_model import Ridge\n",
     "from sklearn.preprocessing import PolynomialFeatures\n",
     "from sklearn.pipeline import make_pipeline\n",
     "\n",
-    "\n",
-    "\n",
-    "for degree in [1,2, 3, 4, 5,6,7]:\n",
+    "for degree in [0,1,2, 3, 4, 5,6,7]:\n",
     "    model = make_pipeline(PolynomialFeatures(degree,include_bias=True), Ridge(alpha=0.1))\n",
-    "    model.fit(data_arr, label)\n",
-    "    pred = model.predict(data_arr)\n",
+    "    model.fit(data, label)\n",
+    "    pred = model.predict(data)\n",
     "    # The mean squared error\n",
     "    print('-'*200)\n",
     "    print(\"Mean squared error: %.2f\"\n",
@@ -372,6 +374,228 @@
     "    error= label-pred\n",
     "    print('max:',error.max())\n",
     "    print('min:',error.min())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ridge regression: with Test DataSet and CV\n",
+    "### Cross Validation on training dataset\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+      "degree: 1\n",
+      "Scores: [ 0.96934026  0.96531253  0.96973964  0.97079496]\n",
+      "Mean squared error: 0.01\n",
+      "Variance score: 0.97\n",
+      "y_test: [ 2.85508529  2.94973971  2.75635373  1.96371667  3.3201863 ]\n",
+      "pred:   [ 2.90649916  2.95732474  2.75024203  2.07445605  3.22967906]\n",
+      "--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+      "degree: 2\n",
+      "Scores: [ 0.96320491  0.95784519  0.96126743  0.95571397]\n",
+      "Mean squared error: 0.01\n",
+      "Variance score: 0.97\n",
+      "y_test: [ 2.85508529  2.94973971  2.75635373  1.96371667  3.3201863 ]\n",
+      "pred:   [ 2.95985861  2.94427767  2.75723716  2.12278776  3.17373051]\n",
+      "--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+      "degree: 3\n",
+      "Scores: [ 0.95858958  0.95582071  0.95818016  0.94854812]\n",
+      "Mean squared error: 0.01\n",
+      "Variance score: 0.97\n",
+      "y_test: [ 2.85508529  2.94973971  2.75635373  1.96371667  3.3201863 ]\n",
+      "pred:   [ 2.9519472   2.95925912  2.74326533  2.09518673  3.21752173]\n",
+      "--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+      "degree: 4\n",
+      "Scores: [ 0.95303342  0.95064701  0.94981517  0.94000957]\n",
+      "Mean squared error: 0.01\n",
+      "Variance score: 0.97\n",
+      "y_test: [ 2.85508529  2.94973971  2.75635373  1.96371667  3.3201863 ]\n",
+      "pred:   [ 2.89882526  3.05963365  2.71891413  2.00784082  3.2773074 ]\n",
+      "--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+      "degree: 5\n",
+      "Scores: [ 0.9543531   0.95038635  0.94832042  0.93089327]\n",
+      "Mean squared error: 0.01\n",
+      "Variance score: 0.96\n",
+      "y_test: [ 2.85508529  2.94973971  2.75635373  1.96371667  3.3201863 ]\n",
+      "pred:   [ 2.93145485  3.03630926  2.73468396  2.0631827   3.20095165]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import RidgeCV \n",
+    "\n",
+    "# 30% of the data for the Test is kept at random\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    data, label, test_size=0.25, random_state=0)\n",
+    "\n",
+    "\n",
+    "from sklearn.linear_model import Ridge\n",
+    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "\n",
+    "for degree in [1, 2, 3, 4, 5]:\n",
+    "    print('-'*200)\n",
+    "    print('degree:',degree)\n",
+    "    model = make_pipeline(PolynomialFeatures(degree,include_bias=True), RidgeCV(alphas=[0.001,0.01,0.1,1,10,100],fit_intercept=True,cv=4))\n",
+    "    scores = cross_val_score(model, X_train, y_train, cv=4)\n",
+    "    print('Scores:',scores)\n",
+    "    model.fit(X_train, y_train)\n",
+    "    pred = model.predict(X_test)\n",
+    "    # The mean squared error\n",
+    "    print(\"Mean squared error: %.2f\"\n",
+    "          % mean_squared_error(y_test, pred))\n",
+    "    # Explained variance score: 1 is perfect prediction\n",
+    "    print('Variance score: %.2f' % r2_score(y_test, pred))\n",
+    "    print('y_test:',y_test[:5])\n",
+    "    print('pred:  ',pred[:5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+      "degree: 1\n",
+      "Scores: [ 0.9682832   0.96882629  0.96765279  0.97283368]\n",
+      "Mean squared error: 0.01\n",
+      "Variance score: 0.97\n",
+      "y_test: [ 2.85508529  2.94973971  2.75635373  1.96371667  3.3201863 ]\n",
+      "pred:   [ 2.89633672  2.93799101  2.7411413   2.07556002  3.22769496]\n",
+      "--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+      "degree: 2\n",
+      "Scores: [ 0.96752401  0.96364198  0.9633273   0.96972415]\n",
+      "Mean squared error: 0.01\n",
+      "Variance score: 0.97\n",
+      "y_test: [ 2.85508529  2.94973971  2.75635373  1.96371667  3.3201863 ]\n",
+      "pred:   [ 2.90235429  2.93821114  2.73435303  2.08723873  3.22719309]\n",
+      "--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+      "degree: 3\n",
+      "Scores: [ 0.96736743  0.96371446  0.96306529  0.96814192]\n",
+      "Mean squared error: 0.01\n",
+      "Variance score: 0.97\n",
+      "y_test: [ 2.85508529  2.94973971  2.75635373  1.96371667  3.3201863 ]\n",
+      "pred:   [ 2.89891649  2.93018998  2.73657945  2.08121764  3.23092439]\n",
+      "--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+      "degree: 4\n",
+      "Scores: [ 0.96724436  0.963208    0.96309492  0.96789818]\n",
+      "Mean squared error: 0.01\n",
+      "Variance score: 0.97\n",
+      "y_test: [ 2.85508529  2.94973971  2.75635373  1.96371667  3.3201863 ]\n",
+      "pred:   [ 2.89883528  2.93098195  2.73646399  2.08064732  3.23068177]\n",
+      "--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+      "degree: 5\n",
+      "Scores: [ 0.96714576  0.96295213  0.96315074  0.96783945]\n",
+      "Mean squared error: 0.01\n",
+      "Variance score: 0.97\n",
+      "y_test: [ 2.85508529  2.94973971  2.75635373  1.96371667  3.3201863 ]\n",
+      "pred:   [ 2.90003268  2.93138286  2.73655095  2.08153764  3.22621403]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LassoCV \n",
+    "\n",
+    "# 30% of the data for the Test is kept at random\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    data, label, test_size=0.3, random_state=0)\n",
+    "\n",
+    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "\n",
+    "for degree in [1, 2, 3, 4, 5]:\n",
+    "    print('-'*200)\n",
+    "    print('degree:',degree)\n",
+    "    model = make_pipeline(PolynomialFeatures(degree,include_bias=True), LassoCV(alphas=[0.001,0.01,0.1,1,10,100],fit_intercept=True,cv=4))\n",
+    "    scores = cross_val_score(model, X_train, y_train, cv=4)\n",
+    "    print('Scores:',scores)\n",
+    "    model.fit(X_train, y_train)\n",
+    "    pred = model.predict(X_test)\n",
+    "    # The mean squared error\n",
+    "    print(\"Mean squared error: %.2f\"\n",
+    "          % mean_squared_error(y_test, pred))\n",
+    "    # Explained variance score: 1 is perfect prediction\n",
+    "    print('Variance score: %.2f' % r2_score(y_test, pred))\n",
+    "    print('y_test:',y_test[:5])\n",
+    "    print('pred:  ',pred[:5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KRR complexity and bandwidth selected and model fitted in 1.021 s\n",
+      "Mean squared error: 0.01\n",
+      "Variance score: 0.9724\n",
+      "Sample y_test: [ 3.44333169  1.55023629  3.43498205  2.17696001  2.83458413]\n",
+      "Sample pred:   [ 3.3780122   1.4180844   3.58964151  2.18511231  2.86856006]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import time\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.model_selection import learning_curve\n",
+    "from sklearn.kernel_ridge import KernelRidge\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import RidgeCV \n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "\n",
+    "# Random sample of the data for the Test is kept\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    data, label, test_size=0.25, random_state=2)\n",
+    "\n",
+    "\n",
+    "kr = GridSearchCV(KernelRidge(kernel='rbf'), cv=5,\n",
+    "                  param_grid={\"alpha\": [1e0, 0.1, 1e-2, 1e-3],\n",
+    "                              \"gamma\": np.logspace(-2, 2, 5)})\n",
+    "\n",
+    "t0 = time.time()\n",
+    "kr.fit(X_train, y_train)\n",
+    "kr_fit = time.time() - t0\n",
+    "print(\"KRR complexity and bandwidth selected and model fitted in %.3f s\"\n",
+    "      % kr_fit)\n",
+    "\n",
+    "\n",
+    "pred = kr.predict(X_test)\n",
+    "# The mean squared error\n",
+    "print(\"Mean squared error: %.2f\"\n",
+    "          % mean_squared_error(y_test, pred))\n",
+    "# Explained variance score: 1 is perfect prediction\n",
+    "print('Variance score: %.4f' % r2_score(y_test, pred))\n",
+    "print('Sample y_test:',y_test[:5])\n",
+    "print('Sample pred:  ',pred[:5])"
    ]
   },
   {
