--- a/machine-learning/neural-networks/Book-2.ipynb
+++ b/machine-learning/neural-networks/Book-2.ipynb
@@ -166,25 +166,37 @@
     "loss_train=[]\n",
     "loss_test=[]\n",
     "\n",
-    "for i in range(100000):\n",
+    "saver = tf.train.Saver()\n",
+    "\n",
+    "#Restoring the Model\n",
+    "saver.restore(sess, \"book2/book2.ckpt\")\n",
+    "\n",
+    "for i in range(1,1000000):\n",
     "    batch_X,batch_Y=mnist.train.next_batch(1000)\n",
     "    train_data={X:batch_X,Y_:batch_Y}\n",
     "    sess.run(train_step,feed_dict=train_data)\n",
-    "    if i%100==0:\n",
+    "    \n",
+    "    #Save the model, after every 1000 iteration\n",
+    "    if i%1000==0:\n",
+    "        save_path = saver.save(sess, \"book2/book2.ckpt\")\n",
+    "        print(\"Model saved in path: %s\" % save_path)\n",
+    "    \n",
+    "    if i%10==0:\n",
     "        a,c=sess.run([accuracy,cross_entropy],feed_dict=train_data)\n",
     "        index.append(i)\n",
     "        accuracy_train.append(a)\n",
     "        loss_train.append(c)\n",
+    "        \n",
     "    #print(str(i) + \"Train: accuracy:\" + str(a) + \" loss: \" + str(c))\n",
     "    \n",
     "    test_data={X:mnist.test.images,Y_:mnist.test.labels}\n",
     "    a,c=sess.run([accuracy,cross_entropy],feed_dict=test_data)\n",
-    "    if i%100==0:\n",
+    "    if i%10==0:\n",
     "        #print(str(i) + \" : accuracy:\" + str(a) + \" loss: \" + str(c))\n",
     "        accuracy_test.append(a)\n",
     "        loss_test.append(c)\n",
     "    \n",
-    "    if(i%1000==0):\n",
+    "    if(i%100==0):\n",
     "        plt.clf()\n",
     "        plt.title(\"Accuracy\")\n",
     "        plt.plot(index,accuracy_test)\n",
