--- a/machine-learning/neural-networks/Deep-Learning-Course.ipynb
+++ b/machine-learning/neural-networks/Deep-Learning-Course.ipynb
@@ -9,6 +9,179 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Titanic: Machine Learning from Disaster"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Learning 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## notmnist.ipynb\n",
+    "- https://github.com/tensorflow/tensorflow/blob/master/tensorflow/examples/udacity/1_notmnist.ipynb\n",
+    "- 22 Feb 2018\n",
+    "\n",
+    "This notebook uses the notMNIST dataset to be used with python experiments. This dataset is designed to look like the classic MNIST dataset, while looking a little more like real data: it's a harder task, and the data is a lot less 'clean' than MNIST."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# These are all the modules we'll be using later. Make sure you can import them\n",
+    "# before proceeding further.\n",
+    "from __future__ import print_function\n",
+    "import imageio\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import os\n",
+    "import sys\n",
+    "import tarfile\n",
+    "from IPython.display import display, Image\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from six.moves.urllib.request import urlretrieve\n",
+    "from six.moves import cPickle as pickle\n",
+    "\n",
+    "# Config the matplotlib backend as plotting inline in IPython\n",
+    "%matplotlib inline\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Attempting to download: notMNIST_large.tar.gz\n",
+      "0%....5%....10%....15%....20%....25%....30%....35%....40%....45%....50%....55%....60%....65%....70%....75%....80%....85%....90%....95%....100%\n",
+      "Download Complete!\n",
+      "Found and verified ./notMNIST_large.tar.gz\n",
+      "Attempting to download: notMNIST_small.tar.gz\n",
+      "0%....5%....10%....15%....20%....25%....30%....35%....40%....45%....50%....55%....60%....65%....70%....75%....80%....85%....90%....95%....100%\n",
+      "Download Complete!\n",
+      "Found and verified ./notMNIST_small.tar.gz\n"
+     ]
+    }
+   ],
+   "source": [
+    "url = 'https://commondatastorage.googleapis.com/books1000/'\n",
+    "last_percent_reported = None\n",
+    "data_root = '.' # Change me to store data elsewhere\n",
+    "\n",
+    "def download_progress_hook(count, blockSize, totalSize):\n",
+    "  \"\"\"A hook to report the progress of a download. This is mostly intended for users with\n",
+    "  slow internet connections. Reports every 5% change in download progress.\n",
+    "  \"\"\"\n",
+    "  global last_percent_reported\n",
+    "  percent = int(count * blockSize * 100 / totalSize)\n",
+    "\n",
+    "  if last_percent_reported != percent:\n",
+    "    if percent % 5 == 0:\n",
+    "      sys.stdout.write(\"%s%%\" % percent)\n",
+    "      sys.stdout.flush()\n",
+    "    else:\n",
+    "      sys.stdout.write(\".\")\n",
+    "      sys.stdout.flush()\n",
+    "      \n",
+    "    last_percent_reported = percent\n",
+    "        \n",
+    "def maybe_download(filename, expected_bytes, force=False):\n",
+    "  \"\"\"Download a file if not present, and make sure it's the right size.\"\"\"\n",
+    "  dest_filename = os.path.join(data_root, filename)\n",
+    "  if force or not os.path.exists(dest_filename):\n",
+    "    print('Attempting to download:', filename) \n",
+    "    filename, _ = urlretrieve(url + filename, dest_filename, reporthook=download_progress_hook)\n",
+    "    print('\\nDownload Complete!')\n",
+    "  statinfo = os.stat(dest_filename)\n",
+    "  if statinfo.st_size == expected_bytes:\n",
+    "    print('Found and verified', dest_filename)\n",
+    "  else:\n",
+    "    raise Exception(\n",
+    "      'Failed to verify ' + dest_filename + '. Can you get to it with a browser?')\n",
+    "  return dest_filename\n",
+    "\n",
+    "train_filename = maybe_download('notMNIST_large.tar.gz', 247336696)\n",
+    "test_filename = maybe_download('notMNIST_small.tar.gz', 8458043)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting data for ./notMNIST_large. This may take a while. Please wait.\n",
+      "['./notMNIST_large/A', './notMNIST_large/B', './notMNIST_large/C', './notMNIST_large/D', './notMNIST_large/E', './notMNIST_large/F', './notMNIST_large/G', './notMNIST_large/H', './notMNIST_large/I', './notMNIST_large/J']\n",
+      "Extracting data for ./notMNIST_small. This may take a while. Please wait.\n",
+      "['./notMNIST_small/A', './notMNIST_small/B', './notMNIST_small/C', './notMNIST_small/D', './notMNIST_small/E', './notMNIST_small/F', './notMNIST_small/G', './notMNIST_small/H', './notMNIST_small/I', './notMNIST_small/J']\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_classes = 10\n",
+    "np.random.seed(133)\n",
+    "\n",
+    "def maybe_extract(filename, force=False):\n",
+    "  root = os.path.splitext(os.path.splitext(filename)[0])[0]  # remove .tar.gz\n",
+    "  if os.path.isdir(root) and not force:\n",
+    "    # You may override by setting force=True.\n",
+    "    print('%s already present - Skipping extraction of %s.' % (root, filename))\n",
+    "  else:\n",
+    "    print('Extracting data for %s. This may take a while. Please wait.' % root)\n",
+    "    tar = tarfile.open(filename)\n",
+    "    sys.stdout.flush()\n",
+    "    tar.extractall(data_root)\n",
+    "    tar.close()\n",
+    "  data_folders = [\n",
+    "    os.path.join(root, d) for d in sorted(os.listdir(root))\n",
+    "    if os.path.isdir(os.path.join(root, d))]\n",
+    "  if len(data_folders) != num_classes:\n",
+    "    raise Exception(\n",
+    "      'Expected %d folders, one per class. Found %d instead.' % (\n",
+    "        num_classes, len(data_folders)))\n",
+    "  print(data_folders)\n",
+    "  return data_folders\n",
+    "  \n",
+    "train_folders = maybe_extract(train_filename)\n",
+    "test_folders = maybe_extract(test_filename)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Learning 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Softmax Function"
    ]
   },
@@ -73,7 +246,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -87,7 +260,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
