--- a/machine-learning/Keras-tutorial-2.ipynb
+++ b/machine-learning/Keras-tutorial-2.ipynb
@@ -16,6 +16,9 @@
     }
    ],
    "source": [
+    "# Data\n",
+    "# https://www.kaggle.com/siddarthareddyt/cats-and-dogs/data\n",
+    "\n",
     "import numpy as np\n",
     "import keras\n",
     "from keras.models import Sequential\n",
@@ -169,7 +172,7 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "  1/200 [..............................] - ETA: 15:28 - loss: 6.3898 - acc: 0.5900"
+      "199/200 [============================>.] - ETA: 2s - loss: 8.0409 - acc: 0.5011"
      ]
     }
    ],
