--- a/machine-learning/Keras-tutorial-2.ipynb
+++ b/machine-learning/Keras-tutorial-2.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/administrator/anaconda3/envs/py37/lib/python3.5/site-packages/h5py/__init__.py:34: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "/home/sandeep/anaconda3/envs/py36/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
       "  from ._conv import register_converters as _register_converters\n",
       "Using TensorFlow backend.\n"
      ]
@@ -38,20 +38,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "train_path='/Users/administrator/Research/trainings/learnings/data/cats-and-dogs/train'\n",
     "valid_path='/Users/administrator/Research/trainings/learnings/data/cats-and-dogs/valid'\n",
-    "test_path='/Users/administrator/Research/trainings/learnings/data/cats-and-dogs/test'"
+    "test_path='/Users/administrator/Research/trainings/learnings/data/cats-and-dogs/test'\n",
+    "\n",
+    "train_path='/home/sandeep/datasets/dataset/dataset/training_set'\n",
+    "valid_path='/home/sandeep/datasets/dataset/dataset/validation_set'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,10 +93,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "imgs,labels=next(train_batches)"
@@ -103,23 +102,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "IOPub data rate exceeded.\n",
-      "The notebook server will temporarily stop sending output\n",
-      "to the client in order to avoid crashing it.\n",
-      "To change this limit, set the config variable\n",
-      "`--NotebookApp.iopub_data_rate_limit`.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "plots(imgs,titles=labels)\n",
+    "#plots(imgs,titles=labels)\n",
     "# Dogs: [1,0]\n",
     "# Cats[0,1]"
    ]
@@ -137,10 +124,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "model = Sequential(\n",
@@ -154,10 +139,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "model.compile(Adam(lr=0.001),loss='categorical_crossentropy',metrics=['accuracy'])"
@@ -165,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -175,30 +158,30 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "20/20 [==============================] - 25s 1s/step - loss: 8.5829 - acc: 0.4675 - val_loss: 8.1235 - val_acc: 0.4960\n",
+      "1/1 [==============================] - 40s 40s/step - loss: 7.1771 - acc: 0.4500 - val_loss: 8.0107 - val_acc: 0.5030\n",
       "Epoch 2/5\n",
-      "20/20 [==============================] - 23s 1s/step - loss: 8.5829 - acc: 0.4675 - val_loss: 7.8817 - val_acc: 0.5110\n",
+      "1/1 [==============================] - 3s 3s/step - loss: 8.0590 - acc: 0.5000 - val_loss: 7.9785 - val_acc: 0.5050\n",
       "Epoch 3/5\n",
-      "20/20 [==============================] - 23s 1s/step - loss: 7.5352 - acc: 0.5325 - val_loss: 8.2525 - val_acc: 0.4880\n",
+      "1/1 [==============================] - 3s 3s/step - loss: 6.4472 - acc: 0.6000 - val_loss: 7.9623 - val_acc: 0.5060\n",
       "Epoch 4/5\n",
-      "20/20 [==============================] - 24s 1s/step - loss: 8.3411 - acc: 0.4825 - val_loss: 7.7044 - val_acc: 0.5220\n",
+      "1/1 [==============================] - 3s 3s/step - loss: 7.2531 - acc: 0.5500 - val_loss: 8.4942 - val_acc: 0.4730\n",
       "Epoch 5/5\n",
-      "20/20 [==============================] - 24s 1s/step - loss: 8.3814 - acc: 0.4800 - val_loss: 8.3331 - val_acc: 0.4830\n"
+      "1/1 [==============================] - 3s 3s/step - loss: 6.4472 - acc: 0.6000 - val_loss: 7.8495 - val_acc: 0.5130\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x1a29932c50>"
+       "<keras.callbacks.History at 0x7f402cc55be0>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.fit_generator(train_batches,steps_per_epoch=20,validation_data=valid_batches,validation_steps=50,epochs=5,verbose=1)"
+    "model.fit_generator(train_batches,steps_per_epoch=1,validation_data=valid_batches,validation_steps=50,epochs=5,verbose=1)"
    ]
   },
   {
@@ -210,25 +193,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading data from https://github.com/fchollet/deep-learning-models/releases/download/v0.1/vgg16_weights_tf_dim_ordering_tf_kernels.h5\n",
-      "553467904/553467096 [==============================] - 76s 0us/step\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "vgg16_model=keras.applications.vgg16.VGG16()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +280,7 @@
        "keras.engine.training.Model"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,10 +291,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "model=Sequential()\n",
@@ -330,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -399,16 +371,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<keras.layers.core.Dense at 0x1a1803b6a0>"
+       "<keras.layers.core.Dense at 0x7f402fe4ddd8>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,10 +468,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
     "model.add(Dense(2,activation='softmax'))"
@@ -507,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -576,10 +546,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
     "model.compile(Adam(lr=0.001),loss='categorical_crossentropy',metrics=['accuracy'])"
@@ -587,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -595,8 +563,26 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      " 1/20 [>.............................] - ETA: 3:08 - loss: 0.6852 - acc: 0.6500"
+      "20/20 [==============================] - 14s 700ms/step - loss: 0.5338 - acc: 0.9575 - val_loss: 0.5277 - val_acc: 0.9510\n",
+      "Epoch 2/5\n",
+      "20/20 [==============================] - 13s 671ms/step - loss: 0.5183 - acc: 0.9575 - val_loss: 0.5102 - val_acc: 0.9570\n",
+      "Epoch 3/5\n",
+      "20/20 [==============================] - 14s 676ms/step - loss: 0.5026 - acc: 0.9600 - val_loss: 0.5000 - val_acc: 0.9500\n",
+      "Epoch 4/5\n",
+      "20/20 [==============================] - 14s 685ms/step - loss: 0.4846 - acc: 0.9625 - val_loss: 0.4833 - val_acc: 0.9540\n",
+      "Epoch 5/5\n",
+      "20/20 [==============================] - 13s 670ms/step - loss: 0.4813 - acc: 0.9500 - val_loss: 0.4680 - val_acc: 0.9610\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7f402fc7bba8>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -615,9 +601,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:py37]",
+   "display_name": "Python [conda env:py36]",
    "language": "python",
-   "name": "conda-env-py37-py"
+   "name": "conda-env-py36-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -629,7 +615,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
