--- a/machine-learning/Keras - Tutorial 1.ipynb
+++ b/machine-learning/Keras - Tutorial 1.ipynb
@@ -45,7 +45,9 @@
   {
    "cell_type": "code",
    "execution_count": 176,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -73,7 +75,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#for i in train_samples:\n",
@@ -114,7 +118,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#for i in scaled_train_sample:\n",
@@ -152,7 +158,9 @@
   {
    "cell_type": "code",
    "execution_count": 197,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import keras\n",
@@ -167,7 +175,9 @@
   {
    "cell_type": "code",
    "execution_count": 198,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model = Sequential([\n",
@@ -210,7 +220,9 @@
   {
    "cell_type": "code",
    "execution_count": 200,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model.compile(Adam(lr=0.001),loss='sparse_categorical_crossentropy',metrics=['accuracy'])"
@@ -258,7 +270,9 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# model.evaluate(scaled_train_sample,train_labels)"
@@ -267,7 +281,9 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# model.layers[0].trainable = True\n",
@@ -282,7 +298,9 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -306,7 +324,9 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# model = Sequential([\n",
@@ -384,7 +404,9 @@
   {
    "cell_type": "code",
    "execution_count": 212,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "predictions=model.predict_classes(scaled_test_samples,verbose=0)\n",
@@ -614,7 +636,9 @@
   {
    "cell_type": "code",
    "execution_count": 229,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model2.load_weights('keras-tutorial-1-weights')\n",
