--- a/machine-learning/Keras-tutorial-2.ipynb
+++ b/machine-learning/Keras-tutorial-2.ipynb
@@ -2,19 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/sandeep/anaconda3/envs/py36/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n",
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Data\n",
     "# https://www.kaggle.com/siddarthareddyt/cats-and-dogs/data\n",
@@ -38,21 +28,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train_path='/Users/administrator/Research/trainings/learnings/data/cats-and-dogs/train'\n",
     "valid_path='/Users/administrator/Research/trainings/learnings/data/cats-and-dogs/valid'\n",
     "test_path='/Users/administrator/Research/trainings/learnings/data/cats-and-dogs/test'\n",
     "\n",
-    "train_path='/home/sandeep/datasets/dataset/dataset/training_set'\n",
-    "valid_path='/home/sandeep/datasets/dataset/dataset/validation_set'"
+    "#train_path='/home/sandeep/datasets/dataset/dataset/training_set'\n",
+    "#valid_path='/home/sandeep/datasets/dataset/dataset/validation_set'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -65,14 +57,16 @@
     }
    ],
    "source": [
-    "train_batches=ImageDataGenerator().flow_from_directory(train_path,target_size=(224,224),classes=['dogs','cats'],batch_size=20)\n",
-    "valid_batches=ImageDataGenerator().flow_from_directory(valid_path,target_size=(224,224),classes=['dogs','cats'],batch_size=20)\n"
+    "train_batches=ImageDataGenerator().flow_from_directory(train_path,target_size=(224,224),classes=['dogs','cats'],batch_size=3)\n",
+    "valid_batches=ImageDataGenerator().flow_from_directory(valid_path,target_size=(224,224),classes=['dogs','cats'],batch_size=3)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -93,8 +87,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 59,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "imgs,labels=next(train_batches)"
@@ -103,7 +99,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#plots(imgs,titles=labels)\n",
@@ -114,7 +112,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Shape of the batch of images\n",
@@ -125,7 +125,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model = Sequential(\n",
@@ -140,7 +142,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model.compile(Adam(lr=0.001),loss='categorical_crossentropy',metrics=['accuracy'])"
@@ -193,8 +197,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "vgg16_model=keras.applications.vgg16.VGG16()"
@@ -202,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +218,7 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "input_1 (InputLayer)         (None, 224, 224, 3)       0         \n",
+      "input_2 (InputLayer)         (None, 224, 224, 3)       0         \n",
       "_________________________________________________________________\n",
       "block1_conv1 (Conv2D)        (None, 224, 224, 64)      1792      \n",
       "_________________________________________________________________\n",
@@ -271,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +286,7 @@
        "keras.engine.training.Model"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,8 +297,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model=Sequential()\n",
@@ -302,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +320,7 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "input_1 (InputLayer)         (None, 224, 224, 3)       0         \n",
+      "input_2 (InputLayer)         (None, 224, 224, 3)       0         \n",
       "_________________________________________________________________\n",
       "block1_conv1 (Conv2D)        (None, 224, 224, 64)      1792      \n",
       "_________________________________________________________________\n",
@@ -371,16 +379,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<keras.layers.core.Dense at 0x7f402fe4ddd8>"
+       "<keras.layers.core.Dense at 0x1a29804898>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +409,7 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "input_1 (InputLayer)         (None, 224, 224, 3)       0         \n",
+      "input_2 (InputLayer)         (None, 224, 224, 3)       0         \n",
       "_________________________________________________________________\n",
       "block1_conv1 (Conv2D)        (None, 224, 224, 64)      1792      \n",
       "_________________________________________________________________\n",
@@ -458,8 +466,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for layer in model.layers:\n",
@@ -468,8 +478,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model.add(Dense(2,activation='softmax'))"
@@ -477,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +499,7 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "input_1 (InputLayer)         (None, 224, 224, 3)       0         \n",
+      "input_2 (InputLayer)         (None, 224, 224, 3)       0         \n",
       "_________________________________________________________________\n",
       "block1_conv1 (Conv2D)        (None, 224, 224, 64)      1792      \n",
       "_________________________________________________________________\n",
@@ -531,7 +543,7 @@
       "_________________________________________________________________\n",
       "fc2 (Dense)                  (None, 4096)              16781312  \n",
       "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 2)                 2002      \n",
+      "dense_3 (Dense)              (None, 2)                 2002      \n",
       "=================================================================\n",
       "Total params: 134,262,546\n",
       "Trainable params: 2,002\n",
@@ -546,8 +558,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
+   "execution_count": 78,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model.compile(Adam(lr=0.001),loss='categorical_crossentropy',metrics=['accuracy'])"
@@ -555,38 +569,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5\n",
-      "20/20 [==============================] - 14s 700ms/step - loss: 0.5338 - acc: 0.9575 - val_loss: 0.5277 - val_acc: 0.9510\n",
-      "Epoch 2/5\n",
-      "20/20 [==============================] - 13s 671ms/step - loss: 0.5183 - acc: 0.9575 - val_loss: 0.5102 - val_acc: 0.9570\n",
-      "Epoch 3/5\n",
-      "20/20 [==============================] - 14s 676ms/step - loss: 0.5026 - acc: 0.9600 - val_loss: 0.5000 - val_acc: 0.9500\n",
-      "Epoch 4/5\n",
-      "20/20 [==============================] - 14s 685ms/step - loss: 0.4846 - acc: 0.9625 - val_loss: 0.4833 - val_acc: 0.9540\n",
-      "Epoch 5/5\n",
-      "20/20 [==============================] - 13s 670ms/step - loss: 0.4813 - acc: 0.9500 - val_loss: 0.4680 - val_acc: 0.9610\n"
+      "Epoch 1/1\n",
+      "10/10 [==============================] - 23s 2s/step - loss: 0.5900 - acc: 0.9333 - val_loss: 0.6020 - val_acc: 0.8667\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7f402fc7bba8>"
+       "<keras.callbacks.History at 0x1a1cc04208>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.fit_generator(train_batches,steps_per_epoch=20,validation_data=valid_batches,validation_steps=50,epochs=5,verbose=1)"
+    "model.fit_generator(train_batches,steps_per_epoch=10,validation_data=valid_batches,validation_steps=5,epochs=1,verbose=1)"
    ]
   },
   {
@@ -601,9 +607,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:py36]",
+   "display_name": "Python [conda env:py37]",
    "language": "python",
-   "name": "conda-env-py36-py"
+   "name": "conda-env-py37-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -615,7 +621,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
