keras transfer learning

--- a/notes/Optimization_methods_26_Feb_2018.ipynb
+++ b/notes/Optimization_methods_26_Feb_2018.ipynb
@@ -83,6 +83,92 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Update\n",
+    "- $\\theta_{k+1}=\\theta_k - H_k^{-1}g_k$\n",
+    "  - $g_k$ is first derivate of $f$ at $\\theta_k$\n",
+    "  - $H_k$ is second derivate of $f$ at $\\theta_k$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Problem\n",
+    "- Computing the Hessian $H_k$ is hard\n",
+    "- Inverse of $H_k$ is hard sometimes.\n",
+    "  - Compexity of inverting $d*d$ matrix is $d^3$\n",
+    "- What if function is non-convex."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Convergence of $\\theta_k$ to a local minimum\n",
+    "$H_k$ has to be semi-positive definite.\n",
+    "- or all eigen values of $H_k$ has to be greater than or equal to zero"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mixed method\n",
+    "- Alternate between Newton and Gradient descent in case Hessian is not positive semi-definite.\n",
+    "- Once hessian is positive semi-definite, use the Newton's method"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. BFGS: Not computing the exact Hessian\n",
+    "## Quasi Newton method\n",
+    "   - use an approximate to hessian: rank 2 update to keep estimate the hessian\n",
+    "   - from $d^3$ to $d^2$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Approximations of Hessian that are easy to invert\n",
+    "- Rank 2 estimate of the Hessian.\n",
+    "  - function of change in gradient and change in $\n",
+    "  \\theta$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- $Y_k = \\theta_k - \\theta_{k-1}$\n",
+    "- $s_k = g_k - g_{k-1}$\n",
+    "\n",
+    "- $H_k = B_{k+1} = B_k + \\frac{y_k y_k^T}{y_k^T*s_k} - \\frac{(B_k*s_k)(B_ks_k)^T}{s_k^T * B_k *s_k}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Formulation of Logistic regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### - $y_i \\in \\{0,1\\}$,\n",
+    "### - $P(y_i=1) | x_i \\in R^d$ = $\\frac{1}{1+e^{-W^T x_i}}$\n",
+    "- MLE of W: \n",
+    "  - $p(Data|W)$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
