--- a/machine-learning/Keras-tutorial-2.ipynb
+++ b/machine-learning/Keras-tutorial-2.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Data\n",
